# dupcanon

./: .env.example  .gitignore  .mintignore  AGENTS.md  LICENSE  README.md  docs.json  pyproject.toml
.github/workflows/: detect-new-shadow.yml
docs/: .mintignore  ARCHITECTURE.md  architecture.mdx  docs.json  duplicate_triage_cli_python_spec_design_doc_v_1.md  evaluation.mdx  full_architecture_review.md  get-started.mdx  index.mdx  one-pager.mdx  online_duplicate_detection_pipeline_design_doc_v1.md  operator_runbook_v1.md  search.mdx
docs/internal/: adoption_readiness_notes.md  duplicate_triage_cli_python_spec_design_doc_v_1.md  full_architecture_review.md  intent_card_pipeline_design_doc_v1.md  journal.md  online_duplicate_detection_pipeline_design_doc_v1.md  operator_runbook_v1.md  (+1 more)
src/dupcanon/: __init__.py  cli.py  (+31 more)
supabase/: config.toml
tests/: test_apply_close_service.py  test_approval.py  test_approve_plan_service.py  test_artifacts.py  test_candidates_service.py  test_canonicalize_service.py  test_cli.py  test_config.py  test_database.py  test_detect_new_service.py  test_embed_service.py  test_gemini_embeddings.py  test_gemini_judge.py  test_github_client.py  test_intent_card_service.py  test_judge_audit_service.py  test_judge_providers.py  test_judge_service.py  test_llm_retry.py  test_llm_text.py  test_logging_config.py  test_maintainers_service.py  test_models.py  test_openai_codex_judge.py  test_openai_embeddings.py  test_openai_judge.py  test_openrouter_judge.py  test_plan_close_service.py  test_search_service.py  test_sync_service.py  test_thinking.py
(+7 files in other folders)
